--- a/src/components/Photo.module.css
+++ b/src/components/Photo.module.css
@@ -7,3 +7,12 @@
   text-align: center;
   color: white;
 }
+.like-button{
+  font: inherit;
+  cursor: pointer;
+  background: #000000;
+  border: 1px solid #ffffff;
+  color: white;
+  padding: 0.75rem 2rem;
+  border-radius: 20px;
+}
