--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,32 @@
-section{
+.search{
   margin: 1rem auto;
-  width: 60%;
-  max-width: 40rem;
+  width: 80%;
   text-align: center;
   background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  color: black;
   padding: 2rem;
   border-radius: 12px;
+}
+.result{
+  margin: auto;
+  width: 90%;
+  text-align: center;
+  padding: 1rem;
 }
 button {
   font: inherit;
   cursor: pointer;
-  background: #230052;
+  background-image: linear-gradient(90deg, #4B4B4B,#111111);
   border: 1px solid #230052;
   color: white;
   padding: 0.75rem 2rem;
   border-radius: 20px;
 }
 
-button:focus {
-  outline: none;
-}
-
-button:hover,
-button:active {
-  background-color: #460897;
-  border-color: #460897;
+button:hover {
+  transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 
