--- a/src/components/Photo.module.css
+++ b/src/components/Photo.module.css
@@ -1,18 +1,15 @@
 .photo{
-    margin: 1rem;
-  padding: 1rem;
-  background-color: #230052;
+  margin: 1rem;
+  padding: 2rem;
+  background-color: rgb(235, 235, 235);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 12px;
   text-align: center;
-  color: white;
+  color: black
 }
-.like-button{
-  font: inherit;
-  cursor: pointer;
-  background: #000000;
-  border: 1px solid #ffffff;
-  color: white;
-  padding: 0.75rem 2rem;
-  border-radius: 20px;
+h2{
+  font-weight: bold;
+}
+.date{
+  font-size: large;
 }
